[package]
name = "faerie"
version = "0.9.1"
authors = ["m4b <m4b.github.io@gmail.com>", "Dan Gohman <sunfish@mozilla.com>", "Pat Hickey <pat@moreproductive.org>", "Philip Craig <philipjcraig@gmail.com>"]
readme = "README.md"
keywords = ["elf", "mach-o", "binary", "object", "compiler"]
repository = "https://github.com/m4b/faerie"
license = "MIT"
description = "ELF and Mach-o native binary object file emitter"
documentation = "https://docs.rs/faerie"
categories = ["development-tools::debugging"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "tests/*"]
edition = "2018"

[[bin]]
name = "prototype"
path = "src/bin/main.rs"

[dependencies]
goblin = "0.0.21"
scroll = "0.9"
log = "0.4"
env_logger = "0.6"
indexmap = "1"
structopt = "0.2"
structopt-derive = "0.2"
string-interner = "0.6"
failure = "0.1"
target-lexicon = "0.3.0"
