[package]
name = "faerie"
version = "0.12.0"
authors = ["m4b <m4b.github.io@gmail.com>", "Dan Gohman <sunfish@mozilla.com>", "Pat Hickey <pat@moreproductive.org>", "Philip Craig <philipjcraig@gmail.com>", "bjorn3 <bjorn3@users.noreply.github.com>"]
readme = "README.md"
keywords = ["elf", "mach-o", "binary", "object", "compiler"]
repository = "https://github.com/m4b/faerie"
license = "MIT"
description = "ELF and Mach-o native binary object file emitter"
documentation = "https://docs.rs/faerie"
categories = ["development-tools::debugging"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "tests/*"]
edition = "2018"

[dependencies]
goblin = "0.1"
scroll = "0.10"
log = "0.4"
indexmap = "1"
string-interner = "0.7.1"
anyhow = "1.0"
target-lexicon = "0.9.0"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.7"
structopt = "0.3"
